namespaces/formwish/front-admin.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-admin
  namespace: formwish
spec:
  selector:
    matchLabels:
      app: front-admin
  template:
    metadata:
      labels:
        app: front-admin
    spec:
      containers:
      - name: front-admin
        image: tktorza/formwish-front-admin:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 30001
      imagePullSecrets:
      - name: docker-hub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: front-admin
  namespace: formwish
spec:
  type: NodePort
  selector:
    app: front-admin
  ports:
  - port: 3002
    targetPort: 30001
