namespaces/formwish/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: formwish
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: tktorza/formwish-front:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 30002
      imagePullSecrets:
      - name: docker-hub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: formwish
spec:
  type: NodePort
  selector:
    app: front
  ports:
  - port: 3000
    targetPort: 30002
