namespaces/formwish/nestjs.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs
  namespace: formwish
spec:
  selector:
    matchLabels:
      app: nestjs
  template:
    metadata:
      labels:
        app: nestjs
    spec:
      containers:
      - name: nestjs
        image: tktorza/formwish-nestjs:5
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 30000
      imagePullSecrets:
      - name: docker-hub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: nestjs
  namespace: formwish
spec:
  selector:
    app: nestjs
  ports:
  - port: 3001
    targetPort: 30000
