namespaces/formwish/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formwish-ingress
  namespace: formwish
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://admin.formwish.io"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.formwish.io"
    secretName: wildcard-formwish-io-tls
  rules:
  - host: "*.formwish.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
  - host: "admin.formwish.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-admin
            port:
              number: 3002
  - host: "api.formwish.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nestjs
            port:
              number: 3001
